
* Use of cumulative prems via "!" in some proof methods has been
discontinued (legacy feature).

* References 'trace_simp' and 'debug_simp' have been replaced by
configuration options stored in the context. Enabling tracing
(the case of debugging is similar) in proofs works via

  using [[trace_simp=true]]

Tracing is then active for all invocations of the simplifier
in subsequent goal refinement steps.


*** Pure ***

* Local theory specifications may depend on extra type variables that
are not present in the result type -- arguments TYPE('a) :: 'a itself
are added internally.  For example:

  definition unitary :: bool where "unitary = (ALL (x::'a) y. x = y)"

* Code generator: details of internal data cache have no impact on
the user space functionality any longer.

* Discontinued unnamed infix syntax (legacy feature for many years) --
need to specify constant name and syntax separately.  Internal ML
datatype constructors have been renamed from InfixName to Infix etc.
Minor INCOMPATIBILITY.

* Commands 'type_notation' and 'no_type_notation' declare type syntax
within a local theory context, with explicit checking of the
constructors involved (in contrast to the raw 'syntax' versions).

* Command 'typedecl' now works within a local theory context --
without introducing dependencies on parameters or assumptions, which
is not possible in Isabelle/Pure.


*** HOL ***

* Command 'typedef' now works within a local theory context -- without
introducing dependencies on parameters or assumptions, which is not
possible in Isabelle/Pure/HOL.  Note that the logical environment may
contain multiple interpretations of local typedefs (with different
non-emptiness proofs), even in a global theory context.

* Theory Library/Coinductive_List has been removed -- superceded by
AFP/thys/Coinductive.

* Split off theory Big_Operators containing setsum, setprod, Inf_fin, Sup_fin,
Min, Max from theory Finite_Set.  INCOMPATIBILITY.
